# dfloat-rops

./: Cargo.toml  README.md
benches/: kvrdfloat.rs  kvrdfloat_fma.rs  kvrdfloat_hw.rs  roughwrap.rs  roughwrap_fma.rs
src/: kvrdfloat.rs  kvrdfloat_fma.rs  lib.rs  roughwrap.rs  roughwrap_fma.rs
