[package]
name = "dfloat-rops"
version = "0.0.4"
authors = ["GNQG <my.t.gnq@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "Rounded arithmetics for dfloat."
repository = "https://github.com/GNQG/dfloat-rops"
keywords = ["math", "number", "float"]
categories = ["algorithms"]

[dependencies]
float-traits = "^0.0.3"
safeeft = "^0.0.5"
roundops = {git = "https://github.com/GNQG/roundops", rev = "4dfcb38fecbd46c81446a3ab2759e165ba5296ac"}
dfloat = {git = "https://github.com/GNQG/dfloat", rev = "65646a7ef55fce8965ffd51691deaac381297979"}
fma = {version = "^0.1.0", optional = true}

[dev-dependencies]
rand = "*"

[features]
use-fma = ["fma", "safeeft/use-fma", "roundops/use-fma"]
